fix spacing issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1319,6 +1319,10 @@ footer {
     margin: $f0 0;
   }
 
+  .working-with-me {
+    margin: $f0 0;
+  }
+
   .working-with-testimonials-wrapper {
     grid-template-columns: 1fr;
   }
